--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "baileys": "^4.3.0",
+    "@adiwajshing/baileys": "^4.3.0",
     "chalk": "^4.1.2",
     "figlet": "^1.5.2",
     "pino": "^8.0.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "readline": "^1.3.0"
   }
 }
